feat: boilerplate webpage

--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "format:check": "prettier --check . --ignore-path .gitignore"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^2.0.13",
     "@chakra-ui/react": "^2.4.3",
+    "@chakra-ui/theme-tools": "^2.0.14",
     "@cobraz/prettier": "^2.0.1",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
