--- a/package.json
+++ b/package.json
@@ -10,25 +10,27 @@
     "format": "prettier --write . --ignore-path .gitignore ",
     "format:check": "prettier --check . --ignore-path .gitignore"
   },
+  "prettier": "@cobraz/prettier",
   "dependencies": {
     "@chakra-ui/icons": "^2.0.13",
     "@chakra-ui/react": "^2.4.3",
     "@chakra-ui/theme-tools": "^2.0.14",
-    "@cobraz/prettier": "^2.0.1",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
-    "@types/node": "18.11.12",
-    "@types/react": "18.0.26",
-    "@types/react-dom": "18.0.9",
-    "eslint": "8.29.0",
-    "eslint-config-next": "13.0.6",
     "framer-motion": "^7.6.19",
     "next": "13.0.6",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "typescript": "4.9.4"
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "prettier": "3.0.0-alpha.4"
+    "@chakra-ui/cli": "^2.2.1",
+    "@cobraz/prettier": "^2.0.1",
+    "eslint": "8.29.0",
+    "eslint-config-next": "13.0.6",
+    "prettier": "3.0.0-alpha.4",
+    "@types/node": "18.11.12",
+    "@types/react": "18.0.26",
+    "@types/react-dom": "18.0.9",
+    "typescript": "4.9.4"
   }
 }
