--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@chakra-ui/theme-tools": "^2.0.14",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@fontsource/inter": "^4.5.15",
     "framer-motion": "^7.6.19",
     "next": "13.0.6",
     "react": "18.2.0",
