--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,21 +1,14 @@
 {
-  "extends": [
-    "@bjerk/eslint-config",
-    "next/core-web-vitals"
-  ],
+  "extends": ["@bjerk/eslint-config", "next/core-web-vitals"],
   "overrides": [
     {
-      "files": [
-        "src/pages/**/*.{js,jsx,ts,tsx}"
-      ],
+      "files": ["src/pages/**/*.{js,jsx,ts,tsx}"],
       "rules": {
         "import/no-default-export": "off"
       }
     },
     {
-      "files": [
-        "src/pages/_app.{js,jsx,ts,tsx}"
-      ],
+      "files": ["src/pages/_app.{js,jsx,ts,tsx}"],
       "rules": {
         "import/no-unassigned-import": "off"
       }
