chore: change artifact path to ./out

--- a/.github/workflows/deploy-to-github-pages.yml
+++ b/.github/workflows/deploy-to-github-pages.yml
@@ -46,7 +46,7 @@ jobs:
       - name: Upload GitHub Pages assets 📦️
         uses: actions/upload-pages-artifact@v1
         with:
-          path: ./build
+          path: ./out
 
   deploy:
     name: Deployment
