--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "framer-motion": "^7.6.19",
     "next": "13.0.6",
     "next-export-optimize-images": "^2.0.0",
+    "next-seo": "^5.15.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
