--- a/package.json
+++ b/package.json
@@ -32,10 +32,9 @@
     "next-seo": "^5.15.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-google-recaptcha": "^2.1.0"
+    "react-google-recaptcha-v3": "^1.10.1"
   },
   "devDependencies": {
-    "@types/react-google-recaptcha": "^2",
     "@bjerk/eslint-config": "^3.0.1",
     "@chakra-ui/cli": "^2.2.1",
     "@cobraz/prettier": "^2.0.1",
