--- a/package.json
+++ b/package.json
@@ -28,11 +28,11 @@
     "graphql-request": "^5.2.0",
     "next": "13.0.6",
     "next-export-optimize-images": "^2.0.0",
+    "next-recaptcha-v3": "^1.1.5",
     "next-sanity-image": "^6.0.0",
     "next-seo": "^5.15.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-google-recaptcha-v3": "^1.10.1"
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
     "@bjerk/eslint-config": "^3.0.1",
