--- a/.github/workflows/deploy-to-github-pages.yml
+++ b/.github/workflows/deploy-to-github-pages.yml
@@ -28,25 +28,23 @@ jobs:
         uses: actions/checkout@v3
 
       - uses: pnpm/action-setup@v2
-        with:
-          version: 7.22.0
 
       - name: Use Node LTS ✨
         uses: actions/setup-node@v3
         with:
           node-version: lts/*
-          cache: yarn
+          cache: pnpm
 
       - name: Install dependencies 📦️
-        run: yarn install --immutable
+        run: pnpm install --frozen-lockfile
 
       - name: Build 🔨
-        run: yarn build-static
+        run: pnpm build
 
       - name: Upload GitHub Pages assets 📦️
         uses: actions/upload-pages-artifact@v1
         with:
-          path: ./out
+          path: ./dist
 
   deploy:
     name: Deployment
@@ -61,35 +59,3 @@ jobs:
       - name: Deploy to GitHub Pages 🚀
         id: deployment
         uses: actions/deploy-pages@v1
-
-  screenshot:
-    name: Screenshot
-    needs: deploy
-    strategy:
-      matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
-        width: [1200, 992, 768, 600]
-    runs-on: ${{ matrix.os }}
-
-    steps:
-      - name: Screenshot Website 📸
-        uses: swinton/screenshot-website@v1.x
-        with:
-          source: ${{ needs.deploy.outputs.url }}
-          destination: screenshot-${{ matrix.os }}-${{ matrix.width }}.png
-          width: ${{ matrix.width }}
-
-  lighthouse:
-    name: Lighthouse
-    needs: deploy
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Lighthouse Website 📈
-        uses: treosh/lighthouse-ci-action@v9
-        with:
-          # TODO: Add URLs as we add more pages
-          urls: |
-            ${{ needs.deploy.outputs.url }}
-          uploadArtifacts: true
-          temporaryPublicStorage: true
