--- a/package.json
+++ b/package.json
@@ -1,57 +1,34 @@
 {
-  "name": "@velt/website",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "build-static": "next build && next export && next-export-optimize-images",
-    "start": "next start",
-    "lint": "next lint",
-    "format": "prettier --write . --ignore-path .gitignore ",
-    "format:check": "prettier --check . --ignore-path .gitignore",
-    "generate": "graphql-codegen --config codegen.ts"
+  "name": "velt",
+  "type": "module",
+  "version": "0.0.1",
+  "packageManager": "pnpm@8.6.12",
+  "engines": {
+    "node": ">=20.5.0"
   },
-  "prettier": "@cobraz/prettier",
+  "volta": {
+    "node": "20.5.0"
+  },
+  "scripts": {
+    "dev": "astro dev",
+    "start": "astro dev",
+    "build": "astro build",
+    "preview": "astro preview",
+    "astro": "astro",
+    "format": "prettier --write .",
+    "format:check": "prettier --check ."
+  },
+  "prettier": "@simenandre/prettier",
   "dependencies": {
-    "@chakra-ui/icons": "^2.0.13",
-    "@chakra-ui/react": "^2.4.3",
-    "@chakra-ui/theme-tools": "^2.0.14",
-    "@emotion/react": "^11.10.5",
-    "@emotion/styled": "^11.10.5",
-    "@fontsource/inter": "^4.5.15",
-    "@portabletext/react": "^2.0.2",
-    "@sanity/image-url": "^1.0.2",
-    "date-fns": "^2.29.3",
-    "framer-motion": "^7.6.19",
-    "graphql": "^16.6.0",
-    "graphql-request": "^5.2.0",
-    "next": "13.0.6",
-    "next-export-optimize-images": "^2.0.0",
-    "next-recaptcha-v3": "^1.1.5",
-    "next-sanity-image": "^6.0.0",
-    "next-seo": "^5.15.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "@astrojs/svelte": "^4.0.0",
+    "astro": "^3.0.0",
+    "sharp": "^0.32.5",
+    "svelte": "^4.0.0"
   },
   "devDependencies": {
-    "@bjerk/eslint-config": "^3.0.1",
-    "@chakra-ui/cli": "^2.2.1",
-    "@cobraz/prettier": "^2.0.1",
-    "@graphql-codegen/cli": "3.2.2",
-    "@graphql-codegen/client-preset": "2.1.1",
-    "@types/node": "18.11.12",
-    "@types/react": "18.0.26",
-    "@types/react-dom": "18.0.9",
-    "@typescript-eslint/eslint-plugin": "5.49.1-alpha.0",
-    "eslint": "8.29.0",
-    "eslint-config-next": "13.0.6",
-    "eslint-config-prettier": "8.6.0",
-    "eslint-plugin-eslint-comments": "3.2.0",
-    "eslint-plugin-prettier": "4.2.1",
-    "eslint-plugin-promise": "6.1.1",
-    "eslint-plugin-unicorn": "44.0.2",
-    "prettier": "^2.8.3",
-    "typescript": "4.9.4"
+    "@simenandre/prettier": "^5.0.0",
+    "@types/grecaptcha": "^3.0.4",
+    "prettier": "^3.0.3",
+    "sass": "^1.66.1"
   }
 }
