--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -9,28 +9,6 @@ on:
       - '*'
 
 jobs:
-  build:
+  typical-workflow:
     name: Lint, format, test and build
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout 🛎️
-        uses: actions/checkout@v3
-
-      - name: Use Node LTS ✨
-        uses: actions/setup-node@v3
-        with:
-          node-version: lts/*
-          cache: yarn
-
-      - name: Install dependencies 📦️
-        run: yarn install --immutable
-
-      - name: Lint 💅
-        run: yarn lint
-
-      - name: Format 🔍
-        run: yarn format:check
-
-      - name: Build 🔨
-        run: yarn build
+    uses: bjerkio/workflows/.github/workflows/pnpm-typical.yml@v2
